Fix alignment of faq-contact header for desktop

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1484,6 +1484,9 @@ section#reviews {
 
     .header {
       grid-area: header;
+      justify-self: left;
+      width: 100%;
+
       h2, p {
         text-align: left;
       }
